Fix collapsing for browse view

--- a/app/assets/stylesheets/shared_data/show.scss
+++ b/app/assets/stylesheets/shared_data/show.scss
@@ -69,6 +69,10 @@
     margin-right: $standard_padding*0.5;
   }
 
+  .separate-panel-top {
+    margin-top: $standard_padding;
+  }
+
   .panels-container {
     margin-top: $standard_padding;
   }
